tests/cases/pass/increment_compound.cs
class Program {
    static void Main() {
        int x = 1;
        x++;
        ++x;
        x += 5;
        x *= 2;
        x--;
        x /= 3;
        x %= 4;
        Console.WriteLine(x);
    }
}
