tests/cases/fail/invalid_token.cs
class Program { static void Main() { int x = 1 @ 2; } }
